components/core/base/networking/authelia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "alpha-a-circle-outline" 
    cert-manager.io/cluster-issuer: ca-issuer
      #cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
      #traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authelia@kubernetescrd
  name: &appname authelia
  namespace: networking
spec:
  rules:
  - host: &uri "authelia.${SECRET_DEV_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
  tls:
  - hosts:
    - *uri
    secretName: *uri
